<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_title_text">Your inventory is empty.</string>
    <string name="empty_view_subtitle_text">Get started by adding an item.</string>
    <string name="item_information">Item Information:</string>
    <string name="item_name">Name</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_price">Price</string>
    <string name="item_description">Description</string>
    <string name="zero">0</string>
    <string name="add_item">Add an Item</string>
    <string name="sell_item">Sell Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="save_failed">Save FAILED.</string>
    <string name="save_successful">The item was saved.</string>
    <string name="update_failed">Update FAILED.</string>
    <string name="update_successful">The item was updated.</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deletion_failed">Deletion FAILED.</string>
    <string name="deletion_successful">The item was deleted.</string>
    <string name="save_item">Save Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="name_required">A name is required.</string>
    <string name="ok">Ok</string>
</resources>
